--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
