--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cra-template-redux": "2.0.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
+    "react-calendar-heatmap": "^1.10.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.1",
