--- a/package.json
+++ b/package.json
@@ -3,22 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@mui/material": "^7.0.2",
+    "@ant-design/charts": "^2.2.7",
+    "@ant-design/icons": "^5.6.1",
+    "@mui/material": "^5.15.11",
     "@react-oauth/google": "^0.12.1",
-    "@reduxjs/toolkit": "^2.7.0",
+    "@reduxjs/toolkit": "^2.2.1",
     "all": "^0.0.0",
-    "axios": "^1.9.0",
+    "antd": "^5.25.0",
+    "axios": "^1.6.7",
     "cra-template-redux": "2.0.0",
     "jwt-decode": "^4.0.0",
-    "react": "^19.1.0",
+    "moment": "^2.30.1",
+    "react": "^18.2.0",
     "react-calendar-heatmap": "^1.10.0",
-    "react-dom": "^19.1.0",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^7.5.1",
+    "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
-    "react-toastify": "^11.0.5",
+    "react-toastify": "^10.0.4",
     "redux-persist": "^6.0.0",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
