--- a/package.json
+++ b/package.json
@@ -5,12 +5,20 @@
   "dependencies": {
     "@ant-design/charts": "^2.2.7",
     "@ant-design/icons": "^5.6.1",
+    "@codemirror/autocomplete": "^6.18.6",
+    "@codemirror/basic-setup": "^0.20.0",
+    "@codemirror/commands": "^6.8.1",
+    "@codemirror/lang-markdown": "^6.3.2",
+    "@codemirror/search": "^6.5.10",
+    "@codemirror/theme-one-dark": "^6.1.2",
+    "@codemirror/view": "^6.36.8",
     "@mui/material": "^5.15.11",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.1",
     "all": "^0.0.0",
     "antd": "^5.25.0",
     "axios": "^1.6.7",
+    "codemirror": "^6.0.1",
     "cra-template-redux": "2.0.0",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
