feat: Update package dependencies and enhance admin dashboard functionality
- Added new dependencies: easymde, highlight.js, react-simplemde-editor, rehype-highlight, and remark-gfm for improved markdown editing and syntax highlighting.
- Refactored exercise API to use camelCase for lesson ID.
- Removed user management API as it is no longer needed.
- Enhanced admin dashboard to fetch and display statistics, including user growth and latest users.
- Updated layout components for better responsiveness and user experience.
- Improved breadcrumb navigation in the PageHeader component.
- Added month selection feature in the TimeSeriesChart for dynamic data visualization.
- Adjusted routing and navigation for exercise and lesson management to include lesson IDs.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "axios": "^1.6.7",
     "codemirror": "^6.0.1",
     "cra-template-redux": "2.0.0",
+    "easymde": "^2.20.0",
+    "highlight.js": "^11.11.1",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
@@ -30,8 +32,11 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "react-simplemde-editor": "^5.2.0",
     "react-toastify": "^10.0.4",
     "redux-persist": "^6.0.0",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "web-vitals": "^3.5.2"
   },
   "scripts": {
