--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-calendar-heatmap": "^1.10.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
