--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "easymde": "^2.20.0",
     "highlight.js": "^11.11.1",
     "jwt-decode": "^4.0.0",
+    "markdown-it": "^14.1.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-calendar-heatmap": "^1.10.0",
@@ -30,6 +31,7 @@
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
+    "react-markdown-editor-lite": "^1.3.4",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
